--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,4 @@
 .img-slider {
-  width: 100px;
   aspect-ratio: 9/16;
 }
 .img-slider img {
@@ -9,7 +8,6 @@
 }
 
 .banner {
-  margin-top: 20vh;
   width: 100%;
   height: 100vh;
   text-align: center;
@@ -22,25 +20,25 @@
   width: 200px;
   height: 250px;
   top: 10%;
-  left: calc(50% - 75px);
+  left: calc(50% - 100px);
   transform-style: preserve-3d;
   transform: perspective(1000px);
-  animation: AutoRun 20s linear infinite;
+  animation: autoRun 20s linear infinite;
+  z-index: 2;
 }
 
-.item {
-  position: absolute;
-  inset: 0 0 0 0;
-  transform: rotateY(calc((var(--position) - 1) * 360 / var(--quantity) * 1deg)) translateZ(400px);
-}
-
-@keyframes AutoRun {
+@keyframes autoRun {
   from {
     transform: perspective(1000px) rotateX(-10deg) rotateY(0deg);
   }
   to {
     transform: perspective(1000px) rotateX(-10deg) rotateY(360deg);
   }
+}
+.banner .slider .item {
+  position: absolute;
+  inset: 0 0 0 0;
+  transform: rotateY(calc((var(--position) - 1) * 360 / var(--quantity) * 1deg)) translateZ(550px);
 }
 
 /*# sourceMappingURL=style.css.map */
